POWR-347 categories on a node view and block placement

--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.contact_information.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.contact_information.yml
@@ -18,7 +18,6 @@ dependencies:
   module:
     - address
     - ds
-    - telephone
 third_party_settings:
   ds:
     layout:
@@ -82,12 +81,12 @@ content:
             lb-col: false
             classes: {  }
   field_phone:
-    type: telephone_link
+    type: string
     weight: 3
     region: content
     label: hidden
     settings:
-      title: ''
+      link_to_entity: false
     third_party_settings:
       ds:
         ft:
@@ -101,6 +100,7 @@ hidden:
   created: true
   field_audience: true
   field_building: true
+  field_legacy_path: true
   field_logo: true
   field_shortname_or_acronym: true
   field_summary: true
