--- a/web/sites/default/config/core.entity_view_display.group.elected_official.contact_information.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.contact_information.yml
@@ -16,7 +16,6 @@ dependencies:
     - group.type.elected_official
   module:
     - address
-    - telephone
 id: group.elected_official.contact_information
 targetEntityType: group
 bundle: elected_official
@@ -45,18 +44,19 @@ content:
       link_to_entity: false
     third_party_settings: {  }
   field_phone:
-    type: telephone_link
+    type: string
     weight: 2
     region: content
     label: hidden
     settings:
-      title: ''
+      link_to_entity: false
     third_party_settings: {  }
 hidden:
   changed: true
   created: true
   field_building: true
   field_bureaus: true
+  field_legacy_path: true
   field_logo: true
   field_shortname_or_acronym: true
   field_summary: true
