--- a/web/sites/default/config/views.view.categories_on_a_node.yml
+++ b/web/sites/default/config/views.view.categories_on_a_node.yml
@@ -1,4 +1,4 @@
-uuid: fa808e8c-e246-494d-88f6-cb8bbd32577d
+uuid: 60e42f39-e71d-4bf4-ae5f-557582cad5e4
 langcode: en
 status: true
 dependencies:
@@ -10,7 +10,7 @@ dependencies:
     - node
     - taxonomy
     - user
-id: categories_on_a_node_2
+id: categories_on_a_node
 label: 'categories on a node'
 module: views
 description: ''
@@ -210,6 +210,8 @@ display:
           entity_field: nid
           plugin_id: node_nid
       display_extenders: {  }
+      link_url: ''
+      link_display: '0'
     cache_metadata:
       max-age: -1
       contexts:
