--- a/web/sites/default/config/block.block.views_block__categories_on_a_node_block_1.yml
+++ b/web/sites/default/config/block.block.views_block__categories_on_a_node_block_1.yml
@@ -1,21 +1,21 @@
-uuid: 015f6099-5b28-4c0e-8fb7-f6dd2ece2957
+uuid: 591a8e0f-9449-471e-b7fe-6a93aa1785e4
 langcode: en
 status: true
 dependencies:
   config:
-    - views.view.categories_on_a_node_2
+    - views.view.categories_on_a_node
   module:
     - views
   theme:
     - cloudy
-id: views_block__categories_on_a_node_2_block_1
+id: views_block__categories_on_a_node_block_1
 theme: cloudy
 region: sidebar_second
 weight: 0
 provider: null
-plugin: 'views_block:categories_on_a_node_2-block_1'
+plugin: 'views_block:categories_on_a_node-block_1'
 settings:
-  id: 'views_block:categories_on_a_node_2-block_1'
+  id: 'views_block:categories_on_a_node-block_1'
   label: ''
   provider: views
   label_display: visible
