--- a/web/sites/default/config/core.entity_view_display.group.program.contact_information.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.contact_information.yml
@@ -16,7 +16,6 @@ dependencies:
     - group.type.program
   module:
     - address
-    - telephone
 id: group.program.contact_information
 targetEntityType: group
 bundle: program
@@ -37,12 +36,12 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_phone:
-    type: telephone_link
+    type: string
     weight: 3
     region: content
     label: above
     settings:
-      title: ''
+      link_to_entity: false
     third_party_settings: {  }
   label:
     label: hidden
@@ -57,6 +56,7 @@ hidden:
   created: true
   field_audience: true
   field_building: true
+  field_legacy_path: true
   field_logo: true
   field_shortname_or_acronym: true
   field_summary: true
