--- a/web/sites/default/config/core.entity_form_display.node.service_location.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.service_location.default.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.node.service_location.field_summary
     - node.type.service_location
   module:
+    - content_moderation
     - link
 id: node.service_location.default
 targetEntityType: node
@@ -67,12 +68,10 @@ content:
     type: string_textfield
     region: content
   moderation_state:
-    type: string_textfield
+    type: moderation_state_default
     weight: 8
     region: content
-    settings:
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
   title:
     type: string_textfield
