--- a/web/sites/default/config/core.entity_view_display.node.building.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.building.default.yml
@@ -8,6 +8,8 @@ dependencies:
     - node.type.building
   module:
     - address
+    - address_map_link
+    - ds
     - panelizer
     - user
 third_party_settings:
@@ -25,7 +27,20 @@ content:
     weight: 0
     label: hidden
     settings: {  }
-    third_party_settings: {  }
+    third_party_settings:
+      address_map_link:
+        link_address: '1'
+        map_link_type: google_maps_directions
+        map_link_position: after
+        map_link_text: 'Get directions with Google'
+        map_link_new_window: 0
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: address_default
     region: content
 hidden:
