--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -5,6 +5,7 @@ module:
   admin_toolbar_tools: 0
   adminimal_admin_toolbar: 0
   allowed_formats: 0
+  anonymous_login: 0
   automated_cron: 0
   block: 0
   block_content: 0
