POWR-347-2 categories on a node view and block placement

--- a/web/sites/default/config/core.entity_view_display.group.program.contact_information.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.contact_information.yml
@@ -56,6 +56,7 @@ hidden:
   created: true
   field_audience: true
   field_building: true
+  field_legacy_path: true
   field_logo: true
   field_shortname_or_acronym: true
   field_summary: true
