POWR-388 refactor for button instead of badge

--- a/web/sites/default/config/views.view.top_searches.yml
+++ b/web/sites/default/config/views.view.top_searches.yml
@@ -13,10 +13,10 @@ dependencies:
 _core:
   default_config_hash: tS8PbpJX90aRFC3-UTgXzdqkq7_2frk2pz4TMijEebM
 id: top_searches
-label: 'Top searches'
+label: 'Homepage: Block: Top searches'
 module: node
-description: 'Find and manage content.'
-tag: default
+description: 'Display top search terms as links directly to the best content for that term.'
+tag: Homepage
 base_table: node_field_data
 base_field: nid
 core: 8.x
@@ -84,7 +84,7 @@ display:
             trim_whitespace: false
             alt: ''
             rel: ''
-            link_class: 'badge badge-secondary'
+            link_class: 'btn btn-light'
             prefix: ''
             suffix: ''
             target: ''
@@ -472,38 +472,6 @@ display:
           plugin_id: text_custom
       defaults:
         empty: false
-    cache_metadata:
-      contexts:
-        - 'languages:language_content'
-        - 'languages:language_interface'
-        - 'user.node_grants:view'
-        - user.permissions
-      max-age: -1
-      tags:
-        - 'config:field.storage.node.field_search_link'
-  page:
-    display_options:
-      path: topsearches/node
-      menu:
-        type: 'default tab'
-        title: Content
-        description: ''
-        expanded: false
-        parent: ''
-        weight: 10
-        context: '0'
-        menu_name: admin
-      tab_options:
-        type: normal
-        title: Content
-        description: 'Find and manage content'
-        weight: -10
-      display_extenders: {  }
-      enabled: false
-    display_plugin: page
-    display_title: Page
-    id: page
-    position: 1
     cache_metadata:
       contexts:
         - 'languages:language_content'
