POWR-347-2 categories view and block layout update

--- a/web/sites/default/config/block.block.views_block__categories_on_a_node_block_1.yml
+++ b/web/sites/default/config/block.block.views_block__categories_on_a_node_block_1.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - views.view.categories_on_a_node
   module:
+    - node
     - views
   theme:
     - cloudy
@@ -22,4 +23,17 @@ settings:
   views_label: ''
   items_per_page: none
   context_mapping: {  }
-visibility: {  }
+visibility:
+  node_type:
+    id: node_type
+    bundles:
+      alert: alert
+      city_service: city_service
+      event: event
+      guide: guide
+      information: information
+      news: news
+      notification: notification
+    negate: false
+    context_mapping:
+      node: '@node.node_route_context:node'
