--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "drupal/adminimal_admin_toolbar": "^1.5",
         "drupal/adminimal_theme": "^1.3",
         "drupal/allowed_formats": "^1.1",
+        "drupal/anonymous_login": "^1.1",
         "drupal/bootstrap_barrio": "^4.15",
         "drupal/bootstrap_library": "^1.11",
         "drupal/chosen": "^2.5",
@@ -53,6 +54,7 @@
         "drupal/facets": "^1.0",
         "drupal/field_group": "^1.0",
         "drupal/group": "^1.0",
+        "drupal/hsts": "^1.0",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/lightning_media": "~2.1",
         "drupal/link_class": "^1.3",
