POWR-388 make external top search links a thing

--- a/web/sites/default/config/field.field.node.top_search.field_search_link.yml
+++ b/web/sites/default/config/field.field.node.top_search.field_search_link.yml
@@ -18,11 +18,11 @@ entity_type: node
 bundle: top_search
 label: 'Search link'
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
-  link_type: 1
+  link_type: 17
   title: 2
 field_type: link
