--- a/web/modules/custom/portland/portland.services.yml
+++ b/web/modules/custom/portland/portland.services.yml
@@ -1,7 +1,7 @@
 services:
   portland.route_subscriber:
     class: Drupal\portland\Routing\RouteSubscriber
-    arguments: ['@logger.factory']
+    arguments: ['@logger.factory', '@entity_type.manager', '@language_manager']
     tags:
       - { name: event_subscriber }
 
