POWR-347-2 categories block view update

--- a/web/sites/default/config/block.block.views_block__categories_on_a_node_block_1.yml
+++ b/web/sites/default/config/block.block.views_block__categories_on_a_node_block_1.yml
@@ -1,4 +1,4 @@
-uuid: e018f1b6-93bd-41fd-ba97-b0886ca1af2f
+uuid: 301466cf-8917-48e4-bfc4-1aa90487b18c
 langcode: en
 status: true
 dependencies:
@@ -17,20 +17,20 @@ provider: null
 plugin: 'views_block:categories_on_a_node-block_1'
 settings:
   id: 'views_block:categories_on_a_node-block_1'
-  label: ''
+  label: Categories
   provider: views
   label_display: visible
-  views_label: ''
+  views_label: Categories
   items_per_page: none
   context_mapping: {  }
 visibility:
   node_type:
     id: node_type
     bundles:
-      alert: alert
       city_service: city_service
-      event: event
       guide: guide
+      alert: alert
+      event: event
       information: information
       news: news
       notification: notification
