--- a/web/sites/default/config/views.view.categories_on_a_node.yml
+++ b/web/sites/default/config/views.view.categories_on_a_node.yml
@@ -1,4 +1,4 @@
-uuid: d07925bf-6308-44b2-a698-fe63d80e63bf
+uuid: aa6e017e-ed48-467b-9c49-be578eeee5ca
 langcode: en
 status: true
 dependencies:
@@ -59,6 +59,11 @@ display:
         type: html_list
       row:
         type: fields
+        options:
+          default_field_elements: true
+          inline: {  }
+          separator: ''
+          hide_empty: true
       fields:
         name:
           id: name
@@ -105,7 +110,7 @@ display:
           element_wrapper_class: ''
           element_default_classes: true
           empty: ''
-          hide_empty: false
+          hide_empty: true
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: value
@@ -226,6 +231,7 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
+      block_hide_empty: true
     cache_metadata:
       max-age: -1
       contexts:
