--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,7 @@
         "drupal/eva": "^1.3",
         "drupal/extlink": "^1.1",
         "drupal/facets": "^1.0",
+        "drupal/feeds": "^3.0@alpha",
         "drupal/field_group": "^1.0",
         "drupal/group": "^1.0",
         "drupal/hsts": "^1.0",
