--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -44,6 +44,7 @@ module:
   entity_reference: 0
   entity_reference_revisions: 0
   facets: 0
+  feeds: 0
   field: 0
   field_group: 0
   field_ui: 0
