--- a/web/sites/default/config/search_api.index.bureaus.yml
+++ b/web/sites/default/config/search_api.index.bureaus.yml
@@ -11,43 +11,13 @@ dependencies:
   module:
     - taxonomy
     - search_api
+    - portland
     - group
 id: bureaus
 name: Bureaus
 description: 'Index of the bureau/office group type.'
 read_only: false
 field_settings:
-  rendered_item:
-    label: 'Rendered HTML output'
-    property_path: rendered_item
-    type: text
-    configuration:
-      roles:
-        anonymous: anonymous
-      view_mode:
-        'entity:group':
-          bureau_office: default
-  official_organization_name:
-    label: 'Official organization name'
-    datasource_id: 'entity:group'
-    property_path: field_official_organization_name
-    type: string
-    dependencies:
-      config:
-        - field.storage.group.field_official_organization_name
-  shortname_or_acronym:
-    label: 'Shortname or acronym'
-    datasource_id: 'entity:group'
-    property_path: field_shortname_or_acronym
-    type: string
-    dependencies:
-      config:
-        - field.storage.group.field_shortname_or_acronym
-  title:
-    label: Title
-    datasource_id: 'entity:group'
-    property_path: label
-    type: string
   name_actions:
     label: 'Audience » Taxonomy term » Name'
     datasource_id: 'entity:group'
@@ -68,6 +38,37 @@ field_settings:
         - field.storage.group.field_topics
       module:
         - taxonomy
+  official_organization_name:
+    label: 'Official organization name'
+    datasource_id: 'entity:group'
+    property_path: field_official_organization_name
+    type: string
+    dependencies:
+      config:
+        - field.storage.group.field_official_organization_name
+  rendered_item:
+    label: 'Rendered HTML output'
+    property_path: rendered_item
+    type: text
+    configuration:
+      roles:
+        anonymous: anonymous
+      view_mode:
+        'entity:group':
+          bureau_office: default
+  shortname_or_acronym:
+    label: 'Shortname or acronym'
+    datasource_id: 'entity:group'
+    property_path: field_shortname_or_acronym
+    type: string
+    dependencies:
+      config:
+        - field.storage.group.field_shortname_or_acronym
+  title:
+    label: Title
+    datasource_id: 'entity:group'
+    property_path: label
+    type: string
 datasource_settings:
   'entity:group':
     bundles:
@@ -80,6 +81,19 @@ datasource_settings:
 processor_settings:
   add_url: {  }
   aggregated_field: {  }
+  ignorecase:
+    all_fields: true
+    fields:
+      - name_actions
+      - name_topics
+      - official_organization_name
+      - rendered_item
+      - shortname_or_acronym
+      - title
+    weights:
+      preprocess_index: -20
+      preprocess_query: -20
+  portland_group_title_field: {  }
   rendered_item: {  }
 tracker_settings:
   default:
