--- a/web/sites/default/config/search_api.index.services.yml
+++ b/web/sites/default/config/search_api.index.services.yml
@@ -10,22 +10,13 @@ dependencies:
   module:
     - taxonomy
     - search_api
+    - portland
     - node
 id: services
 name: Services
 description: 'Index of the service content type.'
 read_only: false
 field_settings:
-  rendered_item:
-    label: 'Rendered HTML output'
-    property_path: rendered_item
-    type: text
-    configuration:
-      roles:
-        anonymous: anonymous
-      view_mode:
-        'entity:node':
-          city_service: default
   name_actions:
     label: 'Community actions » Taxonomy term » Name'
     datasource_id: 'entity:node'
@@ -34,16 +25,6 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_community_actions
-      module:
-        - taxonomy
-  name_topics:
-    label: 'Topics » Taxonomy term » Name'
-    datasource_id: 'entity:node'
-    property_path: 'field_topics:entity:name'
-    type: string
-    dependencies:
-      config:
-        - field.storage.node.field_topics
       module:
         - taxonomy
   name_audience:
@@ -56,6 +37,26 @@ field_settings:
         - field.storage.node.field_audience
       module:
         - taxonomy
+  name_topics:
+    label: 'Topics » Taxonomy term » Name'
+    datasource_id: 'entity:node'
+    property_path: 'field_topics:entity:name'
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_topics
+      module:
+        - taxonomy
+  rendered_item:
+    label: 'Rendered HTML output'
+    property_path: rendered_item
+    type: text
+    configuration:
+      roles:
+        anonymous: anonymous
+      view_mode:
+        'entity:node':
+          city_service: default
   title:
     label: Title
     datasource_id: 'entity:node'
@@ -73,6 +74,18 @@ datasource_settings:
 processor_settings:
   add_url: {  }
   aggregated_field: {  }
+  ignorecase:
+    all_fields: true
+    fields:
+      - name_actions
+      - name_audience
+      - name_topics
+      - rendered_item
+      - title
+    weights:
+      preprocess_index: -20
+      preprocess_query: -20
+  portland_group_title_field: {  }
   rendered_item: {  }
 tracker_settings:
   default:
