--- a/web/sites/default/config/views.view.group_services.yml
+++ b/web/sites/default/config/views.view.group_services.yml
@@ -278,7 +278,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          operator: '='
+          operator: allwords
           value: ''
           group: 1
           exposed: true
@@ -296,9 +296,7 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
-              layout_manager: '0'
-              media_creator: '0'
-              media_manager: '0'
+              sitewide_editor: '0'
             placeholder: ''
           is_grouped: false
           group_info:
