POWR-409 Use search result display mode for services index to include title field

--- a/web/sites/default/config/block.block.cloudy_views_block__categories_on_a_node_block.yml
+++ b/web/sites/default/config/block.block.cloudy_views_block__categories_on_a_node_block.yml
@@ -1,39 +1,36 @@
-uuid: 301466cf-8917-48e4-bfc4-1aa90487b18c
+uuid: 1a2cd325-c61d-4225-80b8-0396535357e5
 langcode: en
 status: true
 dependencies:
   config:
     - views.view.categories_on_a_node
   module:
-    - node
+    - ctools
     - views
   theme:
     - cloudy
-id: views_block__categories_on_a_node_block_1
+id: cloudy_views_block__categories_on_a_node_block
 theme: cloudy
 region: sidebar_second
-weight: 0
+weight: -6
 provider: null
 plugin: 'views_block:categories_on_a_node-block_1'
 settings:
   id: 'views_block:categories_on_a_node-block_1'
-  label: Categories
+  label: ''
   provider: views
   label_display: visible
-  views_label: Categories
+  views_label: ''
   items_per_page: none
   context_mapping: {  }
 visibility:
-  node_type:
-    id: node_type
+  'entity_bundle:node':
+    id: 'entity_bundle:node'
     bundles:
       city_service: city_service
       guide: guide
-      alert: alert
-      event: event
       information: information
       news: news
-      notification: notification
     negate: false
     context_mapping:
       node: '@node.node_route_context:node'
