--- a/web/sites/default/config/search_api.index.services.yml
+++ b/web/sites/default/config/search_api.index.services.yml
@@ -3,10 +3,11 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.storage.node.field_audience
     - field.storage.node.field_community_actions
     - field.storage.node.field_topics
-    - field.storage.node.field_audience
     - search_api.server.database
+    - core.entity_view_mode.node.search_result
   module:
     - taxonomy
     - search_api
@@ -56,7 +57,7 @@ field_settings:
         anonymous: anonymous
       view_mode:
         'entity:node':
-          city_service: default
+          city_service: search_result
   title:
     label: Title
     datasource_id: 'entity:node'
