--- a/tests/behat.yml
+++ b/tests/behat.yml
@@ -20,6 +20,7 @@ default:
             browser: chrome
             wd_host: http://localhost:4444/wd/hub
     Drupal\DrupalExtension:
+      api_driver: 'drush'
       blackbox: ~
     #   api_driver: 'drupal'
     #   drush:
@@ -32,3 +33,5 @@ default:
         message_selector: '.messages'
         error_message_selector: '.messages.messages--error'
         success_message_selector: '.messages.messages--status'
+      drush:
+        binary: drush
