POWR-322 Add reference to alert and notification types on nodes

--- a/web/sites/default/config/core.entity_form_display.node.notification.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.notification.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.notification.field_action_link
     - field.field.node.notification.field_notification_severity
+    - field.field.node.notification.field_notification_style
     - field.field.node.notification.field_summary
     - node.type.notification
   module:
@@ -35,6 +36,15 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: options_select
+    region: content
+  field_notification_style:
+    weight: 26
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
     region: content
   field_summary:
     weight: 2
