--- a/web/sites/default/config/core.entity_view_display.node.alert.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.alert.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.alert.field_action_link
+    - field.field.node.alert.field_alert_type
     - field.field.node.alert.field_severity
     - field.field.node.alert.field_summary
     - node.type.alert
@@ -24,7 +25,7 @@ bundle: alert
 mode: default
 content:
   field_action_link:
-    weight: 2
+    weight: 3
     label: above
     settings:
       trim_length: 80
@@ -35,6 +36,14 @@ content:
     third_party_settings: {  }
     type: link
     region: content
+  field_alert_type:
+    weight: 1
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_severity:
     weight: 0
     label: above
@@ -43,7 +52,7 @@ content:
     type: list_default
     region: content
   field_summary:
-    weight: 1
+    weight: 2
     label: above
     settings:
       link_to_entity: false
