--- a/web/sites/default/config/core.entity_view_display.node.notification.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.notification.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.notification.field_action_link
     - field.field.node.notification.field_notification_severity
+    - field.field.node.notification.field_notification_style
     - field.field.node.notification.field_summary
     - node.type.notification
   module:
@@ -23,6 +24,9 @@ targetEntityType: node
 bundle: notification
 mode: default
 content:
+  content_moderation_control:
+    weight: -20
+    region: content
   field_action_link:
     weight: 2
     label: above
@@ -41,6 +45,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: list_default
+    region: content
+  field_notification_style:
+    weight: 3
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_summary:
     weight: 1
