POWR-322 Modify views to map new variables from taxonomies correctly

--- a/web/sites/default/config/views.view.group_notifications_list.yml
+++ b/web/sites/default/config/views.view.group_notifications_list.yml
@@ -618,6 +618,7 @@ display:
     display_options:
       display_extenders: {  }
       path: group/%group/notifications
+      enabled: false
     cache_metadata:
       max-age: -1
       contexts:
