--- a/web/sites/default/config/views.view.group_notifications_block.yml
+++ b/web/sites/default/config/views.view.group_notifications_block.yml
@@ -642,3 +642,64 @@ display:
         - 'config:field.storage.node.field_action_link'
         - 'config:field.storage.node.field_notification_severity'
         - 'config:field.storage.node.field_summary'
+  page_1:
+    display_plugin: page
+    id: page_1
+    display_title: Page
+    position: 2
+    display_options:
+      display_extenders: {  }
+      path: group/%group/notifications
+      arguments:
+        field_shortname_or_acronym_value:
+          id: field_shortname_or_acronym_value
+          table: group__field_shortname_or_acronym
+          field: field_shortname_or_acronym_value
+          relationship: gid
+          group_type: group
+          admin_label: ''
+          default_action: default
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: raw
+          default_argument_options:
+            index: 1
+            use_alias: true
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            items_per_page: 25
+            override: false
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          glossary: false
+          limit: 0
+          case: none
+          path_case: none
+          transform_dash: false
+          break_phrase: false
+          plugin_id: string
+      defaults:
+        arguments: false
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - url
+      tags:
+        - 'config:field.storage.node.field_action_link'
+        - 'config:field.storage.node.field_notification_severity'
+        - 'config:field.storage.node.field_summary'
