--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -175,11 +175,12 @@ behat_tests: &behat_tests
           # composer install
           if [[ $CIRCLE_BRANCH = "master" ]]; then
             echo 'export BEHAT_PARAMS="{\"extensions\" : {\"Behat\\\MinkExtension\" : {\"base_url\" : \"https://${HTTP_AUTH}@dev-portlandor.pantheonsite.io\"}, \"Drupal\\\DrupalExtension\" : {\"drush\" : { \"alias\": \"portlandor.dev\"}}}}"' >> $BASH_ENV && source $BASH_ENV
+            behat -c tests/behat.yml --tags '@dev'
           else
             echo 'export BEHAT_PARAMS="{\"extensions\" : {\"Behat\\\MinkExtension\" : {\"base_url\" : \"https://${CIRCLE_BRANCH}-portlandor.pantheonsite.io\"}, \"Drupal\\\DrupalExtension\" : {\"drush\" : { \"alias\": \"portlandor.${CIRCLE_BRANCH}\"}}}}"' >> $BASH_ENV && source $BASH_ENV
+            behat -c tests/behat.yml --tags '@multidev'
           fi
           # echo $BEHAT_PARAMS
-          behat -c tests/behat.yml
     - save_cache: *save_cache
     - store_test_results:
         path: /var/www/html/artifacts/behat
