--- a/web/sites/default/config/views.view.group_notifications_block.yml
+++ b/web/sites/default/config/views.view.group_notifications_block.yml
@@ -4,14 +4,16 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_action_link
-    - field.storage.node.field_notification_severity
     - field.storage.node.field_summary
+    - field.storage.taxonomy_term.field_fontawesome_icon
+    - field.storage.taxonomy_term.field_severity
   module:
     - group
     - link
     - node
     - options
     - portland
+    - taxonomy
 id: group_notifications_block
 label: 'Group notifications block'
 module: views
@@ -66,7 +68,8 @@ display:
             id_field: nid
             toggle_changed_field: 1
             changed_field: changed
-            type_field: field_notification_severity
+            icon_field: field_fontawesome_icon
+            severity_field: field_severity
             summary_field: field_summary
             action_link_field: field_action_link
           dismissible: 1
@@ -142,68 +145,6 @@ display:
           field_api_classes: false
           entity_type: node
           entity_field: title
-          plugin_id: field
-        field_notification_severity:
-          id: field_notification_severity
-          table: node__field_notification_severity
-          field: field_notification_severity
-          relationship: gc__node
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: true
-          alter:
-            alter_text: true
-            text: '{{ field_notification_severity|lower }}'
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: list_default
-          settings: {  }
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
           plugin_id: field
         field_summary:
           id: field_summary
@@ -468,6 +409,131 @@ display:
           entity_type: node
           entity_field: nid
           plugin_id: field
+        field_fontawesome_icon:
+          id: field_fontawesome_icon
+          table: taxonomy_term__field_fontawesome_icon
+          field: field_fontawesome_icon
+          relationship: field_notification_style
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: true
+          plugin_id: field
+        field_severity:
+          id: field_severity
+          table: taxonomy_term__field_severity
+          field: field_severity
+          relationship: field_notification_style
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: list_default
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
       filters:
         status:
           id: status
@@ -571,6 +637,15 @@ display:
           entity_type: group_content
           entity_field: gid
           plugin_id: standard
+        field_notification_style:
+          id: field_notification_style
+          table: node__field_notification_style
+          field: field_notification_style
+          relationship: gc__node
+          group_type: group
+          admin_label: 'field_notification_style: Taxonomy term'
+          required: false
+          plugin_id: standard
       arguments:
         field_shortname_or_acronym_value:
           id: field_shortname_or_acronym_value
@@ -621,8 +696,9 @@ display:
         - url
       tags:
         - 'config:field.storage.node.field_action_link'
-        - 'config:field.storage.node.field_notification_severity'
         - 'config:field.storage.node.field_summary'
+        - 'config:field.storage.taxonomy_term.field_fontawesome_icon'
+        - 'config:field.storage.taxonomy_term.field_severity'
   block_1:
     display_plugin: block
     id: block_1
@@ -640,66 +716,6 @@ display:
         - url
       tags:
         - 'config:field.storage.node.field_action_link'
-        - 'config:field.storage.node.field_notification_severity'
         - 'config:field.storage.node.field_summary'
-  page_1:
-    display_plugin: page
-    id: page_1
-    display_title: Page
-    position: 2
-    display_options:
-      display_extenders: {  }
-      path: group/%group/notifications
-      arguments:
-        field_shortname_or_acronym_value:
-          id: field_shortname_or_acronym_value
-          table: group__field_shortname_or_acronym
-          field: field_shortname_or_acronym_value
-          relationship: gid
-          group_type: group
-          admin_label: ''
-          default_action: default
-          exception:
-            value: all
-            title_enable: false
-            title: All
-          title_enable: false
-          title: ''
-          default_argument_type: raw
-          default_argument_options:
-            index: 1
-            use_alias: true
-          default_argument_skip_url: false
-          summary_options:
-            base_path: ''
-            count: true
-            items_per_page: 25
-            override: false
-          summary:
-            sort_order: asc
-            number_of_records: 0
-            format: default_summary
-          specify_validation: false
-          validate:
-            type: none
-            fail: 'not found'
-          validate_options: {  }
-          glossary: false
-          limit: 0
-          case: none
-          path_case: none
-          transform_dash: false
-          break_phrase: false
-          plugin_id: string
-      defaults:
-        arguments: false
-    cache_metadata:
-      max-age: -1
-      contexts:
-        - 'languages:language_content'
-        - 'languages:language_interface'
-        - url
-      tags:
-        - 'config:field.storage.node.field_action_link'
-        - 'config:field.storage.node.field_notification_severity'
-        - 'config:field.storage.node.field_summary'
+        - 'config:field.storage.taxonomy_term.field_fontawesome_icon'
+        - 'config:field.storage.taxonomy_term.field_severity'
