POWR-382 parent group field on programs and bureau/office and menu/backlinks.

--- a/web/sites/default/config/core.entity_form_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.program.default.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.group.program.field_email
     - field.field.group.program.field_legacy_path
     - field.field.group.program.field_logo
+    - field.field.group.program.field_parent_group
     - field.field.group.program.field_phone
     - field.field.group.program.field_shortname_or_acronym
     - field.field.group.program.field_summary
@@ -31,13 +32,14 @@ third_party_settings:
         - field_email
         - field_building
       parent_name: ''
-      weight: 20
+      weight: 7
       format_type: fieldset
       format_settings:
+        label: 'Contact Information'
+        description: 'City offices may provide mailing address, contact phone, and contact email information to the public by filling out these fields.'
         id: contact-information
         classes: ''
-        description: 'City offices may provide mailing address, contact phone, and contact email information to the public by filling out these fields.'
-        required_fields: true
+        required_fields: false
       label: 'Contact Information'
 id: group.program.default
 targetEntityType: group
@@ -47,12 +49,12 @@ content:
   field_address:
     weight: 6
     settings:
-      default_country: null
+      default_country: US
     third_party_settings: {  }
     type: address_default
     region: content
   field_audience:
-    weight: 3
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
@@ -75,7 +77,7 @@ content:
     type: email_default
     region: content
   field_legacy_path:
-    weight: 21
+    weight: 8
     settings:
       size: 60
       placeholder: ''
@@ -84,12 +86,21 @@ content:
     region: content
   field_logo:
     type: image_image
-    weight: 5
+    weight: 6
     settings:
       preview_image_style: thumbnail
       progress_indicator: throbber
     region: content
     third_party_settings: {  }
+  field_parent_group:
+    weight: 3
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
   field_phone:
     weight: 7
     settings:
@@ -120,7 +131,7 @@ content:
     region: content
     type: string_textarea
   field_topics:
-    weight: 4
+    weight: 5
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
