--- a/web/sites/default/config/core.entity_view_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.default.yml
@@ -9,18 +9,49 @@ dependencies:
     - field.field.group.program.field_email
     - field.field.group.program.field_legacy_path
     - field.field.group.program.field_logo
+    - field.field.group.program.field_parent_group
     - field.field.group.program.field_phone
     - field.field.group.program.field_shortname_or_acronym
     - field.field.group.program.field_summary
     - field.field.group.program.field_topics
     - group.type.program
+  module:
+    - ds
+third_party_settings:
+  ds:
+    layout:
+      id: layout_onecol
+      library: layout_discovery/onecol
+      disable_css: false
+      entity_classes: all_classes
+      settings: {  }
+    regions:
+      content:
+        - field_parent_group
+        - label
+        - field_summary
 id: group.program.default
 targetEntityType: group
 bundle: program
 mode: default
 content:
+  field_parent_group:
+    weight: 0
+    label: inline
+    settings:
+      link: true
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: 'Part of'
+            lb-col: false
+            classes: {  }
+    type: entity_reference_label
+    region: content
   field_summary:
-    weight: 1
+    weight: 2
     settings:
       link_to_entity: false
     third_party_settings:
@@ -58,7 +89,7 @@ content:
   label:
     label: hidden
     type: string
-    weight: 0
+    weight: 1
     region: content
     settings:
       link_to_entity: false
