--- a/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.group.bureau_office.field_legacy_path
     - field.field.group.bureau_office.field_logo
     - field.field.group.bureau_office.field_official_organization_name
+    - field.field.group.bureau_office.field_parent_group
     - field.field.group.bureau_office.field_phone
     - field.field.group.bureau_office.field_shortname_or_acronym
     - field.field.group.bureau_office.field_summary
@@ -32,7 +33,7 @@ third_party_settings:
         - field_email
         - field_building
       parent_name: ''
-      weight: 20
+      weight: 8
       format_type: fieldset
       format_settings:
         label: 'Contact Information'
@@ -54,7 +55,7 @@ content:
     type: address_default
     region: content
   field_audience:
-    weight: 3
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
@@ -77,7 +78,7 @@ content:
     type: email_default
     region: content
   field_legacy_path:
-    weight: 25
+    weight: 9
     settings:
       size: 60
       placeholder: ''
@@ -86,7 +87,7 @@ content:
     region: content
   field_logo:
     type: image_image
-    weight: 6
+    weight: 7
     settings:
       preview_image_style: thumbnail
       progress_indicator: throbber
@@ -99,6 +100,15 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
+    region: content
+  field_parent_group:
+    weight: 3
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
     region: content
   field_phone:
     weight: 22
@@ -117,7 +127,7 @@ content:
     type: string_textfield
     region: content
   field_summary:
-    weight: 5
+    weight: 6
     settings:
       rows: 2
       placeholder: ''
@@ -130,7 +140,7 @@ content:
     type: string_textarea
     region: content
   field_topics:
-    weight: 4
+    weight: 5
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
