--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.group.bureau_office.field_legacy_path
     - field.field.group.bureau_office.field_logo
     - field.field.group.bureau_office.field_official_organization_name
+    - field.field.group.bureau_office.field_parent_group
     - field.field.group.bureau_office.field_phone
     - field.field.group.bureau_office.field_shortname_or_acronym
     - field.field.group.bureau_office.field_summary
@@ -27,6 +28,7 @@ third_party_settings:
       settings: {  }
     regions:
       content:
+        - field_parent_group
         - label
         - field_summary
 id: group.bureau_office.default
@@ -34,9 +36,24 @@ targetEntityType: group
 bundle: bureau_office
 mode: default
 content:
+  field_parent_group:
+    weight: 0
+    label: inline
+    settings:
+      link: true
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: 'Part of'
+            lb-col: false
+            classes: {  }
+    type: entity_reference_label
+    region: content
   field_summary:
     type: string
-    weight: 1
+    weight: 2
     region: content
     label: hidden
     settings:
@@ -73,7 +90,7 @@ content:
   label:
     label: hidden
     type: string
-    weight: -5
+    weight: 1
     region: content
     settings:
       link_to_entity: false
