--- a/web/sites/default/config/field.field.group.program.field_address.yml
+++ b/web/sites/default/config/field.field.group.program.field_address.yml
@@ -18,9 +18,23 @@ entity_type: group
 bundle: program
 label: Address
 description: 'Please provide the mailing address for this office.'
-required: true
+required: false
 translatable: true
-default_value: {  }
+default_value:
+  -
+    country_code: US
+    langcode: null
+    administrative_area: ''
+    locality: ''
+    dependent_locality: ''
+    postal_code: ''
+    sorting_code: ''
+    address_line1: ''
+    address_line2: ''
+    organization: ''
+    given_name: ''
+    additional_name: ''
+    family_name: ''
 default_value_callback: ''
 settings:
   available_countries:
@@ -35,9 +49,19 @@ settings:
       override: hidden
     organization:
       override: hidden
+    addressLine1:
+      override: optional
+    addressLine2:
+      override: optional
+    postalCode:
+      override: optional
     sortingCode:
       override: hidden
     dependentLocality:
       override: hidden
+    locality:
+      override: optional
+    administrativeArea:
+      override: optional
   fields: {  }
 field_type: address
