POWR-382 add parent group to projects.

--- a/web/sites/default/config/core.entity_form_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.project.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.group.project.field_audience
     - field.field.group.project.field_date_time_range
     - field.field.group.project.field_legacy_path
+    - field.field.group.project.field_parent_group
     - field.field.group.project.field_shortname_or_acronym
     - field.field.group.project.field_summary
     - field.field.group.project.field_topics
@@ -20,24 +21,33 @@ bundle: project
 mode: default
 content:
   field_audience:
-    weight: 4
+    weight: 5
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   field_date_time_range:
-    weight: 2
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     type: daterange_default
     region: content
   field_legacy_path:
-    weight: 6
+    weight: 7
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
+    region: content
+  field_parent_group:
+    weight: 2
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
     region: content
   field_shortname_or_acronym:
     weight: 1
@@ -48,7 +58,7 @@ content:
     type: string_textfield
     region: content
   field_summary:
-    weight: 3
+    weight: 4
     settings:
       rows: 2
       placeholder: ''
@@ -61,7 +71,7 @@ content:
     type: string_textarea
     region: content
   field_topics:
-    weight: 5
+    weight: 6
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
