--- a/web/sites/default/config/core.entity_view_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.default.yml
@@ -6,17 +6,67 @@ dependencies:
     - field.field.group.project.field_audience
     - field.field.group.project.field_date_time_range
     - field.field.group.project.field_legacy_path
+    - field.field.group.project.field_parent_group
     - field.field.group.project.field_shortname_or_acronym
     - field.field.group.project.field_summary
     - field.field.group.project.field_topics
     - group.type.project
+  module:
+    - datetime_range
+    - ds
+third_party_settings:
+  ds:
+    layout:
+      id: layout_onecol
+      library: layout_discovery/onecol
+      disable_css: false
+      entity_classes: all_classes
+      settings: {  }
+    regions:
+      content:
+        - field_parent_group
+        - label
+        - field_summary
+        - field_date_time_range
 id: group.project.default
 targetEntityType: group
 bundle: project
 mode: default
 content:
+  field_date_time_range:
+    type: daterange_default
+    weight: 3
+    region: content
+    label: above
+    settings:
+      timezone_override: ''
+      format_type: month_day_year
+      separator: ' to '
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_parent_group:
+    weight: 0
+    label: inline
+    settings:
+      link: true
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: 'Part of'
+            lb-col: false
+            classes: {  }
+    type: entity_reference_label
+    region: content
   field_summary:
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       link_to_entity: false
@@ -54,7 +104,7 @@ content:
   label:
     label: hidden
     type: string
-    weight: 0
+    weight: 1
     region: content
     settings:
       link_to_entity: false
@@ -63,7 +113,6 @@ hidden:
   changed: true
   created: true
   field_audience: true
-  field_date_time_range: true
   field_legacy_path: true
   field_shortname_or_acronym: true
   field_topics: true
