--- a/web/sites/default/config/views.view.group_programs.yml
+++ b/web/sites/default/config/views.view.group_programs.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.group.field_summary
+    - group.type.program
   module:
     - group
 id: group_programs
@@ -195,8 +196,63 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
-      filters: {  }
-      sorts: {  }
+      filters:
+        type:
+          id: type
+          table: groups_field_data
+          field: type
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value:
+            program: program
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+            argument: null
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: group
+          entity_field: type
+          plugin_id: bundle
+      sorts:
+        label:
+          id: label
+          table: groups_field_data
+          field: label
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          entity_type: group
+          entity_field: label
+          plugin_id: standard
       title: Programs
       header: {  }
       footer: {  }
@@ -338,6 +394,7 @@ display:
           plugin_id: field
       defaults:
         fields: false
+      block_hide_empty: true
     cache_metadata:
       max-age: -1
       contexts:
