POWR-322 Remove severity fields from nodes

--- a/web/sites/default/config/core.entity_view_display.node.alert.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.alert.teaser.yml
@@ -4,7 +4,8 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
-    - field.field.node.alert.field_severity
+    - field.field.node.alert.field_action_link
+    - field.field.node.alert.field_alert_type
     - field.field.node.alert.field_summary
     - node.type.alert
   module:
@@ -14,9 +15,13 @@ targetEntityType: node
 bundle: alert
 mode: teaser
 content:
+  content_moderation_control:
+    weight: -20
+    region: content
   links:
     weight: 100
     region: content
 hidden:
-  field_severity: true
+  field_action_link: true
+  field_alert_type: true
   field_summary: true
