POWR-378 Overwrite GA tracking code in prod. Add config_split module for future use.

--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -20,6 +20,8 @@ module:
   components: 0
   conditional_fields: 0
   config: 0
+  config_filter: 0
+  config_split: 0
   consumers: 0
   contact: 0
   contact_storage: 0
