--- a/web/sites/default/config/google_analytics.settings.yml
+++ b/web/sites/default/config/google_analytics.settings.yml
@@ -1,7 +1,7 @@
 account: UA-6858269-13
 premium: false
-domain_mode: 2
-cross_domains: portland.gov
+domain_mode: 0
+cross_domains: ''
 visibility:
   request_path_mode: 0
   request_path_pages: "/admin\r\n/admin/*\r\n/batch\r\n/node/add*\r\n/node/*/*\r\n/user/*/*"
