--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
         "drupal/clamav": "^1.0",
         "drupal/components": "^1.0",
         "drupal/conditional_fields": "^1.0@alpha",
+        "drupal/config_split": "^1.4",
         "drupal/console": "^1.0.2",
         "drupal/copyright_block": "^1.0@RC",
         "drupal/core": "~8.5",
