POWR-445 add permissions for authenticated users to see revisions. May move this to a new role with time.

--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -19,6 +19,12 @@ permissions:
   - 'access shortcuts'
   - 'access toolbar'
   - 'access video_browser entity browser pages'
+  - 'revert city_service revisions'
+  - 'revert event revisions'
+  - 'revert guide revisions'
+  - 'revert information revisions'
+  - 'revert news revisions'
+  - 'revert notification revisions'
   - 'schedule editorial transition archive'
   - 'schedule editorial transition archived_draft'
   - 'schedule editorial transition archived_published'
@@ -31,8 +37,15 @@ permissions:
   - 'use editorial transition publish'
   - 'use editorial transition review'
   - 'use text format simple_editor'
+  - 'view all media revisions'
+  - 'view city_service revisions'
+  - 'view event revisions'
+  - 'view guide revisions'
+  - 'view information revisions'
   - 'view latest version'
   - 'view media'
+  - 'view news revisions'
+  - 'view notification revisions'
   - 'view own unpublished content'
   - 'view search api pages'
   - 'view the administration theme'
