POWR-115 - initial commit of POC work to implement bootstrap gallery carousel lightbox.

--- a/web/sites/default/config/core.entity_view_display.group.project.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.teaser.yml
@@ -66,6 +66,7 @@ hidden:
   field_audience: true
   field_date_time_range: true
   field_legacy_path: true
+  field_parent_group: true
   field_shortname_or_acronym: true
   field_topics: true
   uid: true
