--- a/web/sites/default/config/field.field.node.guide.field_body.yml
+++ b/web/sites/default/config/field.field.node.guide.field_body.yml
@@ -13,6 +13,7 @@ dependencies:
     - paragraphs.paragraphs_type.form_app_button
     - paragraphs.paragraphs_type.image
     - paragraphs.paragraphs_type.location
+    - paragraphs.paragraphs_type.media_gallery
     - paragraphs.paragraphs_type.quote
     - paragraphs.paragraphs_type.simple_text
     - paragraphs.paragraphs_type.telephone_button
@@ -51,6 +52,7 @@ settings:
       image: image
       video: video
       audio: audio
+      media_gallery: media_gallery
     target_bundles_drag_drop:
       simple_text:
         enabled: true
@@ -106,4 +108,7 @@ settings:
       audio:
         enabled: true
         weight: 20
+      media_gallery:
+        enabled: true
+        weight: 31
 field_type: entity_reference_revisions
