--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.contact_information.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.contact_information.yml
@@ -102,6 +102,7 @@ hidden:
   field_building: true
   field_legacy_path: true
   field_logo: true
+  field_parent_group: true
   field_shortname_or_acronym: true
   field_summary: true
   field_topics: true
