--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.search_result.yml
@@ -151,6 +151,7 @@ hidden:
   field_legacy_path: true
   field_logo: true
   field_official_organization_name: true
+  field_parent_group: true
   field_phone: true
   field_shortname_or_acronym: true
   field_topics: true
