--- a/web/sites/default/config/core.entity_view_display.group.program.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.search_result.yml
@@ -149,6 +149,7 @@ hidden:
   field_email: true
   field_legacy_path: true
   field_logo: true
+  field_parent_group: true
   field_phone: true
   field_shortname_or_acronym: true
   field_topics: true
