--- a/web/sites/default/config/core.entity_view_display.group.project.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.search_result.yml
@@ -77,6 +77,7 @@ hidden:
   field_audience: true
   field_date_time_range: true
   field_legacy_path: true
+  field_parent_group: true
   field_shortname_or_acronym: true
   field_summary: true
   field_topics: true
