POWR-391 Update ext button class

--- a/web/sites/default/config/core.entity_form_display.paragraph.form_app_button.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.form_app_button.default.yml
@@ -6,19 +6,22 @@ dependencies:
     - field.field.paragraph.form_app_button.field_form_button
     - paragraphs.paragraphs_type.form_app_button
   module:
-    - link
+    - link_class
 id: paragraph.form_app_button.default
 targetEntityType: paragraph
 bundle: form_app_button
 mode: default
 content:
   field_form_button:
-    weight: 1
+    weight: 0
     settings:
       placeholder_url: ''
       placeholder_title: ''
+      link_class_mode: force_class
+      link_class_force: 'btn btn-primary ext'
+      link_class_select: ''
     third_party_settings: {  }
-    type: link_default
+    type: link_class_field_widget
     region: content
 hidden:
   created: true
