POWR-445 loosen permissions to allow all authenticated to see latest revision

--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -38,6 +38,7 @@ permissions:
   - 'use editorial transition review'
   - 'use text format simple_editor'
   - 'view all media revisions'
+  - 'view any unpublished content'
   - 'view city_service revisions'
   - 'view event revisions'
   - 'view guide revisions'
