POWR-397 updated floor field help text

--- a/web/sites/default/config/field.field.node.service_location.field_floor.yml
+++ b/web/sites/default/config/field.field.node.service_location.field_floor.yml
@@ -16,7 +16,7 @@ field_name: field_floor
 entity_type: node
 bundle: service_location
 label: Floor
-description: ''
+description: 'Use this field to specify the floor, room, or area of a building. '
 required: false
 translatable: false
 default_value: {  }
