POWR-428 step refactor, breadcrumbs, card-deck

--- a/web/sites/default/config/core.entity_form_display.paragraph.service_step.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.service_step.default.yml
@@ -19,8 +19,8 @@ content:
     type: paragraphs
     weight: 2
     settings:
-      title: button
-      title_plural: buttons
+      title: element
+      title_plural: elements
       edit_mode: closed
       closed_mode: preview
       autocollapse: all
