--- a/web/sites/default/config/field.field.paragraph.columns_equal.field_column.yml
+++ b/web/sites/default/config/field.field.paragraph.columns_equal.field_column.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.paragraph.field_column
+    - paragraphs.paragraphs_type.audio
     - paragraphs.paragraphs_type.columns_equal
     - paragraphs.paragraphs_type.document
     - paragraphs.paragraphs_type.image
@@ -22,7 +23,7 @@ id: paragraph.columns_equal.field_column
 field_name: field_column
 entity_type: paragraph
 bundle: columns_equal
-label: Column
+label: 'Columns (equal width)'
 description: ''
 required: false
 translatable: false
@@ -36,8 +37,9 @@ settings:
       document: document
       location: location
       simple_text: simple_text
-      quote: quote
       image: image
+      quote: quote
+      audio: audio
       video: video
     target_bundles_drag_drop:
       columns_equal:
@@ -46,12 +48,12 @@ settings:
       email_button:
         weight: 11
         enabled: false
-      document:
-        enabled: true
-        weight: 12
       fax_button:
         weight: 12
         enabled: false
+      document:
+        enabled: true
+        weight: 12
       form_app_button:
         weight: 13
         enabled: false
@@ -67,10 +69,10 @@ settings:
       simple_text:
         enabled: true
         weight: 17
-      quote:
+      image:
         enabled: true
         weight: 18
-      image:
+      quote:
         enabled: true
         weight: 18
       telephone_button:
@@ -79,8 +81,17 @@ settings:
       address:
         weight: 19
         enabled: false
+      audio:
+        enabled: true
+        weight: 20
+      card:
+        weight: 20
+        enabled: false
       building:
         weight: 20
+        enabled: false
+      card_deck:
+        weight: 21
         enabled: false
       video:
         enabled: true
