--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,7 @@
         "drupal/core": "~8.5",
         "drupal/custom_add_another": "^1.0@beta",
         "drupal/ds": "^3.1",
+        "drupal/easy_breadcrumb": "^1.8",
         "drupal/eva": "^1.3",
         "drupal/extlink": "^1.1",
         "drupal/facets": "^1.0",
