--- a/web/sites/default/config/block.block.cloudy_breadcrumbs.yml
+++ b/web/sites/default/config/block.block.cloudy_breadcrumbs.yml
@@ -10,8 +10,8 @@ _core:
   default_config_hash: wDR9JKEATSWldBjw8du8s3G2zjEYeQf88nlld11hMLo
 id: cloudy_breadcrumbs
 theme: cloudy
-region: breadcrumb
-weight: -15
+region: content
+weight: -16
 provider: null
 plugin: system_breadcrumb_block
 settings:
