--- a/web/sites/default/config/field.field.paragraph.card.field_step_action_button.yml
+++ b/web/sites/default/config/field.field.paragraph.card.field_step_action_button.yml
@@ -1,34 +1,29 @@
-uuid: b1d425e3-e177-4954-8483-d1ab4bf4d437
+uuid: c8aa4f43-c01e-42aa-baab-ab2d78079ec1
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.paragraph.field_step_action_button
-    - paragraphs.paragraphs_type.card_deck
-    - paragraphs.paragraphs_type.columns_equal
+    - paragraphs.paragraphs_type.card
     - paragraphs.paragraphs_type.document
     - paragraphs.paragraphs_type.email_button
-    - paragraphs.paragraphs_type.fax_button
     - paragraphs.paragraphs_type.form_app_button
-    - paragraphs.paragraphs_type.location
-    - paragraphs.paragraphs_type.service_step
-    - paragraphs.paragraphs_type.simple_text
     - paragraphs.paragraphs_type.telephone_button
   module:
     - custom_add_another
     - entity_reference_revisions
 third_party_settings:
   custom_add_another:
-    custom_add_another: 'Add element'
-    custom_remove: 'Remove element'
-id: paragraph.service_step.field_step_action_button
+    custom_add_another: 'Add call to action'
+    custom_remove: 'Remove call to action'
+id: paragraph.card.field_step_action_button
 field_name: field_step_action_button
 entity_type: paragraph
-bundle: service_step
-label: Element
-description: 'Add another element to your step instructions.'
+bundle: card
+label: 'Call to action'
+description: 'Optional. Add a call to action such as a button, phone number, or document link.'
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
@@ -36,74 +31,66 @@ settings:
   handler_settings:
     negate: 0
     target_bundles:
-      simple_text: simple_text
-      document: document
       form_app_button: form_app_button
+      document: document
       email_button: email_button
       telephone_button: telephone_button
-      fax_button: fax_button
-      location: location
-      columns_equal: columns_equal
-      card_deck: card_deck
     target_bundles_drag_drop:
-      simple_text:
-        enabled: true
-        weight: -41
-      document:
-        enabled: true
-        weight: -40
-      form_app_button:
-        enabled: true
+      card:
         weight: -39
-      email_button:
-        enabled: true
-        weight: -38
-      telephone_button:
-        enabled: true
-        weight: -37
-      fax_button:
-        enabled: true
-        weight: -36
-      location:
-        enabled: true
-        weight: -35
-      columns_equal:
-        enabled: true
-        weight: -34
-      card_deck:
-        enabled: true
-        weight: -33
-      service_step:
-        weight: -32
-        enabled: false
-      service_mode:
-        weight: -31
         enabled: false
       address:
-        weight: -30
-        enabled: false
-      building:
-        weight: -29
+        weight: -38
         enabled: false
       audio:
-        weight: -28
+        weight: -37
+        enabled: false
+      building:
+        weight: -36
+        enabled: false
+      columns_equal:
+        weight: -35
+        enabled: false
+      form_app_button:
+        enabled: true
+        weight: -34
+      document:
+        enabled: true
+        weight: -33
+      email_button:
+        enabled: true
+        weight: -32
+      telephone_button:
+        enabled: true
+        weight: -31
+      fax_button:
+        weight: -30
         enabled: false
       group_contact_information:
-        weight: -27
-        enabled: false
-      card:
-        weight: -26
+        weight: -29
         enabled: false
       image:
-        weight: -25
+        weight: -28
+        enabled: false
+      location:
+        weight: -27
         enabled: false
       quote:
-        weight: -24
+        weight: -26
         enabled: false
       service_location:
+        weight: -25
+        enabled: false
+      service_mode:
+        weight: -24
+        enabled: false
+      service_step:
         weight: -23
         enabled: false
-      video:
+      simple_text:
         weight: -22
+        enabled: false
+      video:
+        weight: -21
         enabled: false
 field_type: entity_reference_revisions
