--- a/web/sites/default/config/field.storage.paragraph.field_cards.yml
+++ b/web/sites/default/config/field.storage.paragraph.field_cards.yml
@@ -1,19 +1,19 @@
-uuid: fa8d3b59-7655-43e7-812b-ebacd2cbe7cd
+uuid: 5938118c-c6d9-46e5-bc9f-a622aba485a5
 langcode: en
 status: true
 dependencies:
   module:
     - entity_reference_revisions
     - paragraphs
-id: paragraph.field_step_action_button
-field_name: field_step_action_button
+id: paragraph.field_cards
+field_name: field_cards
 entity_type: paragraph
 type: entity_reference_revisions
 settings:
   target_type: paragraph
 module: entity_reference_revisions
 locked: false
-cardinality: -1
+cardinality: 4
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
