--- a/web/sites/default/config/views.view.group_news.yml
+++ b/web/sites/default/config/views.view.group_news.yml
@@ -74,9 +74,9 @@ display:
       style:
         type: default
         options:
-          grouping: {  }
-          row_class: ''
+          row_class: mb-3
           default_row_class: false
+          uses_fields: false
       row:
         type: 'entity:node'
         options:
@@ -299,6 +299,7 @@ display:
         filter_groups: false
         arguments: false
         fields: false
+        header: false
       filter_groups:
         operator: AND
         groups:
@@ -316,8 +317,8 @@ display:
             value: all
             title_enable: false
             title: All
-          title_enable: true
-          title: '{{ arguments.gid|placeholder }} news'
+          title_enable: false
+          title: ''
           default_argument_type: group_id_from_url
           default_argument_options: {  }
           default_argument_skip_url: false
@@ -601,6 +602,17 @@ display:
           separator: ''
           field_api_classes: false
           plugin_id: field
+      header:
+        result:
+          id: result
+          table: views
+          field: result
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          content: '@total news found'
+          plugin_id: result
     cache_metadata:
       max-age: -1
       contexts:
