--- a/web/sites/default/config/block.block.cloudy_views_block__group_menu_block_1.yml
+++ b/web/sites/default/config/block.block.cloudy_views_block__group_menu_block_1.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - views.view.group_menu
   module:
-    - system
+    - group
     - views
   theme:
     - cloudy
@@ -24,8 +24,13 @@ settings:
   items_per_page: none
   context_mapping: {  }
 visibility:
-  request_path:
-    id: request_path
-    pages: '/group/*'
+  group_type:
+    id: group_type
+    group_types:
+      project: project
+      bureau_office: bureau_office
+      elected_official: elected_official
+      program: program
     negate: false
-    context_mapping: {  }
+    context_mapping:
+      group: '@group.group_route_context:group'
