--- a/web/sites/default/config/core.entity_view_display.media.document.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.document.default.yml
@@ -8,8 +8,8 @@ dependencies:
     - field.field.media.document.field_summary
     - media.type.document
   module:
+    - ds
     - file
-    - user
 _core:
   default_config_hash: 4tgcXj_iKv9Fw3xmONUfCHKqO7OeOa11qVesruN4k4k
 id: media.document.default
@@ -17,23 +17,25 @@ targetEntityType: media
 bundle: document
 mode: default
 content:
-  content_moderation_control:
-    weight: 0
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   created:
     label: inline
     type: timestamp
-    weight: 5
+    weight: 3
     settings:
-      date_format: short
+      date_format: long
       custom_date_format: ''
       timezone: ''
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     region: content
   field_document:
-    weight: 3
+    weight: 2
     label: hidden
     settings:
       use_description_as_link_text: true
@@ -41,7 +43,7 @@ content:
     type: file_default
     region: content
   field_summary:
-    weight: 2
+    weight: 1
     label: hidden
     settings:
       link_to_entity: false
@@ -51,18 +53,13 @@ content:
   name:
     label: hidden
     type: string
-    weight: 1
+    weight: 0
     settings:
       link_to_entity: false
     third_party_settings: {  }
     region: content
-  uid:
-    label: inline
-    type: author
-    weight: 4
-    settings: {  }
-    third_party_settings: {  }
-    region: content
 hidden:
+  content_moderation_control: true
   field_media_in_library: true
   thumbnail: true
+  uid: true
