--- a/web/sites/default/config/easy_breadcrumb.settings.yml
+++ b/web/sites/default/config/easy_breadcrumb.settings.yml
@@ -14,4 +14,4 @@ excluded_paths: ''
 replaced_titles: ''
 segments_separator: null
 title_segment_as_link: false
-title_from_page_when_available: false
+title_from_page_when_available: true
