--- a/web/sites/default/config/pathauto.pattern.group_events.yml
+++ b/web/sites/default/config/pathauto.pattern.group_events.yml
@@ -7,16 +7,16 @@ dependencies:
 id: group_events
 label: 'Group events'
 type: 'canonical_entities:node'
-pattern: '[node:group:field_shortname_or_acronym]/events/[node:title]'
+pattern: '[node:group:field_shortname_or_acronym]/events/[node:field_start_date:date:html_year]/[node:field_start_date:date:html_month]/[node:title]'
 selection_criteria:
-  94aeacb1-c495-45d9-bddb-da0f1a5cebc3:
+  dca26f26-1094-48ec-a413-fe644ea5c49c:
     id: node_type
     bundles:
       event: event
     negate: false
     context_mapping:
       node: node
-    uuid: 94aeacb1-c495-45d9-bddb-da0f1a5cebc3
+    uuid: dca26f26-1094-48ec-a413-fe644ea5c49c
 selection_logic: and
 weight: -7
 relationships: {  }
