--- a/web/sites/default/config/views.view.group_guides.yml
+++ b/web/sites/default/config/views.view.group_guides.yml
@@ -3,12 +3,11 @@ langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.teaser
     - node.type.guide
-    - taxonomy.vocabulary.topics
   module:
     - group
     - node
-    - taxonomy
     - user
 id: group_guides
 label: 'Group guides'
@@ -381,99 +380,10 @@ display:
           entity_type: node
           entity_field: title
           plugin_id: string
-        field_topics_target_id:
-          id: field_topics_target_id
-          table: node__field_topics
-          field: field_topics_target_id
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: or
-          value: {  }
-          group: 1
-          exposed: true
-          expose:
-            operator_id: field_topics_target_id_op
-            label: Topics
-            description: ''
-            use_operator: false
-            operator: field_topics_target_id_op
-            identifier: field_topics_target_id
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
-              layout_manager: '0'
-              media_creator: '0'
-              media_manager: '0'
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          reduce_duplicates: false
-          type: select
-          limit: true
-          vid: topics
-          hierarchy: true
-          error_message: true
-          plugin_id: taxonomy_index_tid
-        type:
-          id: type
-          table: node_field_data
-          field: type
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: in
-          value:
-            guide: guide
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            reduce: false
-            argument: null
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          entity_type: node
-          entity_field: type
-          plugin_id: bundle
       defaults:
         filters: false
         filter_groups: false
-        arguments: true
+        arguments: false
         style: false
         row: false
         header: false
@@ -482,17 +392,16 @@ display:
         groups:
           1: AND
       style:
-        type: html_list
+        type: default
         options:
-          grouping: {  }
           row_class: list-group-item
           default_row_class: false
-          type: ul
-          wrapper_class: container
-          class: 'list-group col-12'
+          uses_fields: false
       row:
-        type: fields
-        options: {  }
+        type: 'entity:node'
+        options:
+          relationship: none
+          view_mode: teaser
       header:
         result:
           id: result
@@ -502,21 +411,45 @@ display:
           group_type: group
           admin_label: ''
           empty: false
-          content: 'Displaying @start - @end of @total guides'
+          content: '@total guides found'
           plugin_id: result
-        area:
-          id: area
-          table: views
-          field: area
-          relationship: none
+      arguments:
+        gid:
+          id: gid
+          table: group_content_field_data
+          field: gid
+          relationship: group_content
           group_type: group
           admin_label: ''
-          empty: false
-          tokenize: true
-          content:
-            value: '<p>Browse or search through the guides provided by {{ arguments.gid }}.</p>'
-            format: simple_editor
-          plugin_id: text
+          default_action: default
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: group_id_from_url
+          default_argument_options: {  }
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            items_per_page: 25
+            override: false
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          break_phrase: false
+          not: false
+          entity_type: group_content
+          entity_field: gid
+          plugin_id: group_id
     cache_metadata:
       max-age: -1
       contexts:
@@ -524,7 +457,6 @@ display:
         - 'languages:language_interface'
         - route
         - url
-        - user
         - 'user.node_grants:view'
         - user.permissions
       tags: {  }
