--- a/web/sites/default/config/views.view.group_media.yml
+++ b/web/sites/default/config/views.view.group_media.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.media.teaser
     - field.storage.media.field_document
     - image.style.thumbnail
     - media.type.audio
@@ -88,8 +89,7 @@ display:
           description: ''
           columns:
             name: name
-            moderation_state: moderation_state
-            bundle: bundle
+            field_document: field_document
             created: created
             changed: changed
             uid: uid
@@ -97,42 +97,33 @@ display:
             edit_media: edit_media
           info:
             name:
-              sortable: true
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            moderation_state:
               sortable: false
               default_sort_order: asc
               align: ''
               separator: ''
               empty_column: false
               responsive: ''
-            bundle:
-              sortable: true
-              default_sort_order: asc
+            field_document:
               align: ''
               separator: ''
               empty_column: false
               responsive: ''
             created:
-              sortable: true
-              default_sort_order: desc
+              sortable: false
+              default_sort_order: asc
               align: ''
               separator: ''
               empty_column: false
               responsive: ''
             changed:
-              sortable: true
-              default_sort_order: desc
+              sortable: false
+              default_sort_order: asc
               align: ''
               separator: ''
               empty_column: false
               responsive: ''
             uid:
-              sortable: true
+              sortable: false
               default_sort_order: asc
               align: ''
               separator: ''
@@ -152,10 +143,13 @@ display:
               separator: ''
               empty_column: false
               responsive: ''
-          default: changed
+          default: '-1'
           empty_table: false
       row:
-        type: fields
+        type: 'entity:media'
+        options:
+          relationship: none
+          view_mode: default
       fields:
         name:
           id: name
@@ -760,8 +754,18 @@ display:
           entity_type: media
           entity_field: changed
           plugin_id: date
-      title: 'Group media'
-      header: {  }
+      title: Media
+      header:
+        result:
+          id: result
+          table: views
+          field: result
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          content: '@total results found'
+          plugin_id: result
       footer: {  }
       empty: {  }
       relationships:
@@ -793,8 +797,8 @@ display:
             value: all
             title_enable: false
             title: All
-          title_enable: true
-          title: '{{ arguments.gid|placeholder }} media'
+          title_enable: false
+          title: ''
           default_argument_type: group_id_from_url
           default_argument_options: {  }
           default_argument_skip_url: false
@@ -883,6 +887,8 @@ display:
         title: false
         arguments: false
         access: false
+        style: false
+        row: false
       filters:
         name:
           id: name
@@ -897,7 +903,7 @@ display:
           exposed: true
           expose:
             operator_id: name_op
-            label: 'Document name contains'
+            label: 'Title contains'
             description: ''
             use_operator: false
             operator: name_op
@@ -909,6 +915,7 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
+              sitewide_editor: '0'
             placeholder: ''
           is_grouped: false
           group_info:
@@ -1402,7 +1409,7 @@ display:
           absolute: false
           entity_type: media
           plugin_id: entity_link_edit
-      title: 'Group documents'
+      title: Documents
       arguments:
         gid:
           id: gid
@@ -1416,8 +1423,8 @@ display:
             value: all
             title_enable: false
             title: All
-          title_enable: true
-          title: '{{ arguments.gid|placeholder }} documents'
+          title_enable: false
+          title: ''
           default_argument_type: group_id_from_url
           default_argument_options: {  }
           default_argument_skip_url: false
@@ -1444,6 +1451,17 @@ display:
         type: perm
         options:
           perm: 'access content'
+      style:
+        type: default
+        options:
+          row_class: 'list-group-item mb-3'
+          default_row_class: true
+          uses_fields: false
+      row:
+        type: 'entity:media'
+        options:
+          relationship: none
+          view_mode: teaser
     cache_metadata:
       max-age: -1
       contexts:
@@ -2009,7 +2027,7 @@ display:
           absolute: false
           entity_type: media
           plugin_id: entity_link_edit
-      title: 'Group videos'
+      title: Videos
       access:
         type: perm
         options:
@@ -2579,7 +2597,7 @@ display:
           absolute: false
           entity_type: media
           plugin_id: entity_link_edit
-      title: 'Group videos'
+      title: Videos
       access:
         type: perm
         options:
