--- a/web/sites/default/config/views.view.group_services.yml
+++ b/web/sites/default/config/views.view.group_services.yml
@@ -3,12 +3,10 @@ langcode: en
 status: true
 dependencies:
   config:
-    - taxonomy.vocabulary.community_actions
-    - taxonomy.vocabulary.topics
+    - core.entity_view_mode.node.teaser
   module:
     - group
     - node
-    - taxonomy
     - user
 id: group_services
 label: 'Group services'
@@ -43,7 +41,7 @@ display:
       exposed_form:
         type: basic
         options:
-          submit_button: Apply
+          submit_button: Filter
           reset_button: false
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
@@ -278,13 +276,13 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          operator: allwords
+          operator: contains
           value: ''
           group: 1
           exposed: true
           expose:
             operator_id: title_op
-            label: Title
+            label: 'Title contains'
             description: ''
             use_operator: false
             operator: title_op
@@ -313,106 +311,13 @@ display:
           entity_type: node
           entity_field: title
           plugin_id: string
-        field_topics_target_id:
-          id: field_topics_target_id
-          table: node__field_topics
-          field: field_topics_target_id
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: or
-          value: {  }
-          group: 1
-          exposed: true
-          expose:
-            operator_id: field_topics_target_id_op
-            label: Topics
-            description: ''
-            use_operator: false
-            operator: field_topics_target_id_op
-            identifier: field_topics_target_id
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
-              layout_manager: '0'
-              media_creator: '0'
-              media_manager: '0'
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          reduce_duplicates: false
-          type: select
-          limit: true
-          vid: topics
-          hierarchy: true
-          error_message: true
-          plugin_id: taxonomy_index_tid
-        field_community_actions_target_id:
-          id: field_community_actions_target_id
-          table: node__field_community_actions
-          field: field_community_actions_target_id
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: or
-          value: {  }
-          group: 1
-          exposed: true
-          expose:
-            operator_id: field_community_actions_target_id_op
-            label: Actions
-            description: ''
-            use_operator: false
-            operator: field_community_actions_target_id_op
-            identifier: field_community_actions_target_id
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
-              layout_manager: '0'
-              media_creator: '0'
-              media_manager: '0'
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          reduce_duplicates: false
-          type: select
-          limit: true
-          vid: community_actions
-          hierarchy: true
-          error_message: true
-          plugin_id: taxonomy_index_tid
       defaults:
         filters: false
         filter_groups: false
         arguments: false
+        style: false
+        row: false
+        header: false
       filter_groups:
         operator: AND
         groups:
@@ -430,8 +335,8 @@ display:
             value: all
             title_enable: false
             title: All
-          title_enable: true
-          title: 'Services from {{ arguments.gid|placeholder }}'
+          title_enable: false
+          title: ''
           default_argument_type: group_id_from_url
           default_argument_options: {  }
           default_argument_skip_url: false
@@ -454,6 +359,28 @@ display:
           entity_type: group_content
           entity_field: gid
           plugin_id: group_id
+      style:
+        type: default
+        options:
+          row_class: 'list-group-item mb-3'
+          default_row_class: false
+          uses_fields: false
+      row:
+        type: 'entity:node'
+        options:
+          relationship: none
+          view_mode: teaser
+      header:
+        result:
+          id: result
+          table: views
+          field: result
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          content: '@total services found'
+          plugin_id: result
     cache_metadata:
       max-age: -1
       contexts:
@@ -461,7 +388,6 @@ display:
         - 'languages:language_interface'
         - route
         - url
-        - user
         - 'user.node_grants:view'
         - user.permissions
       tags: {  }
